修改配置，build gitpage

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>职业测评</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset=utf-8>
+  <meta name=viewport content="width=device-width,initial-scale=1">
+  <title>职业测评</title>
+  <link href=./dist/static/css/app.17872971383b3bdba28221c8379b0490.css rel=stylesheet>
+</head>
+
+<body>
+  <div id=app></div>
+  <script type=text/javascript src=./dist/static/js/manifest.110a4712592efb526bb1.js></script>
+  <script type=text/javascript src=./dist/static/js/vendor.2314a6953455ab454a12.js></script>
+  <script type=text/javascript src=./dist/static/js/app.484cda665cf30f9b20ce.js></script>
+</body>
+
 </html>
